--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,37 +2,47 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login-container {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.login-form {
+  width: 400px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-input {
+  margin-top: 10px !important;
+}
+
+.login-button {
+  margin-top: 15px;
+  float: right;
+}
+
+.margin-x-5 {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.is-right {
+  float: right;
+}
+
+.faded {
+  opacity: 0.7;
+}
+
+.font-14 {
+  font-size: 14px;
+}
+
+.v-align-baseline {
+  vertical-align: bottom;
 }
